# ChroneCore

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/chrone_app/: CMakeLists.txt  app_controller.cpp  app_poll.cpp  clock_screen.cpp
components/chrone_app/include/: chrone_app.hpp  chrone_display.hpp
components/chrone_esp_wifi_connect/: CMakeLists.txt  README.md  wifi_configuration_ap.cc  wifi_station.cc
components/chrone_esp_wifi_connect/assets/: wifi_configuration.html
components/chrone_ui/: CMakeLists.txt  alarm_screen.cpp  alarm_time_picker.cpp  analog_clock.cpp  chrone_alarm_icon.c  chrone_haptic.c  digital_clock.cpp  segment_draw.cpp
components/chrone_ui/fonts/: README.md  chrone_font_dseg56.c
components/chrone_ui/icons/: README.md  gen_alarm_icon.py
components/chrone_ui/include/: alarm_time_picker.hpp  analog_clock.hpp  chrone_alarm_icon.h  chrone_alarm_icon_bitmap.h  chrone_font_dseg56.h  chrone_haptic.h  chrone_ui.h  clock_layout.h  segment_draw.hpp
components/chrone_weather/: CMakeLists.txt  Kconfig  chrone_weather_api.c  weather_city_list.c  weather_city_list.h  weather_code_map.c  weather_code_map.h  weather_icon_render.c  weather_service.c  weather_service.h
components/chrone_weather/include/: chrone_weather.h  chrone_weather_config.h  chrone_weather_icon.h
components/chrone_weather/weather_icons/: weather_icon_map.c  weather_icon_map.h
components/chrone_weather/weather_icons/icons_48x48/: wi_cloudy_48x48.h  wi_cloudy_gusts_48x48.h  wi_day_cloudy_48x48.h  wi_day_cloudy_gusts_48x48.h  wi_day_fog_48x48.h  wi_day_hail_48x48.h  wi_day_rain_48x48.h  wi_day_sleet_48x48.h  wi_day_snow_48x48.h  wi_day_sunny_48x48.h  wi_day_thunderstorm_48x48.h  wi_day_windy_48x48.h  wi_dust_48x48.h  wi_fog_48x48.h  wi_hail_48x48.h  (+16 more)
(+55 files in other folders)
